testdata/error/zero_cost.ledger.error.txt
error: cost or lot exchange must not be zero
 --> /okane/testdata/error/zero_cost.ledger:4:58
  |
3 | 2024/09/01 Shop
4 |     Expenses                                     100 CHF @ 0 USD
  |                                                          ^^^^^^^ exchange with zero amount
5 |     Assets:Banks
  |
